added new files and images.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <!-- Favicons -->
-    <link href="assets/img/favicon.ico" rel="icon">
+    <link href="assets/img/fav00.ico" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   
     <!-- Template Main CSS File -->
@@ -67,7 +67,7 @@
     
             <div class="row">
               <div class="col-lg-4" data-aos="fade-right">
-                <img src="assets/img/P2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/M01.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                 <p class="fst-italic">
@@ -252,7 +252,7 @@
 
           <div class="col-lg-6">
             <div class="info">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7343.791481690146!2d72.58710000000005!3d23.027600000000007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e833f8edb011d%3A0x433ae2cd02531a94!2sShree%20Darshan%20apartment!5e0!3m2!1sen!2sin!4v1666196660832!5m2!1sen!2sin" width="100%" height="265" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3670.392435404584!2d72.5400030759947!3d23.082725814079513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e833ff3058ae5%3A0x2d90c1154f6442e6!2sShree%20Darshan%20Appartment%2C%20Chandlodiya%2C%20Ahmedabad%2C%20Gujarat%20382481!5e0!3m2!1sen!2sin!4v1689677542614!5m2!1sen!2sin" width="100%" height="265" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
@@ -261,11 +261,11 @@
           <div class="col text-center">
             <h4>Follow me on .....</h4>
             <div class="social-links mt-3 text-center">
-              <a href="#" class="twitter"><i class="fa-brands fa-twitter"></i></a>
-              <a href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa-brands fa-github"></i></a>
-              <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="https://twitter.com/Harshal_2973" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+              <a href="https://www.facebook.com/harshal.acharya.942/" class="facebook"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://www.instagram.com/harshal2907" class="instagram"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://github.com/harshal2973" class="github"><i class="fa-brands fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/harshal2973/" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
         </div>
