--- a/index.html
+++ b/index.html
@@ -62,17 +62,16 @@
 
             <div class="section-title">
               <h2>About</h2>
-              <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+              <p style="text-align: justify;">Welcome to my personal portfolio! I'm Harshal Acharya, and I'm passionate about Web Development, Web Designing and Graphic Designing. With a blend of creativity and technical expertise, I've been on an exciting journey of self-discovery and growth in my professional career.</p>
             </div>
     
             <div class="row">
               <div class="col-lg-4" data-aos="fade-right">
-                <img src="assets/img/M01.png" class="img-fluid" alt="">
+                <img src="assets/img/M02.jpg" class="img-fluid" alt="">
               </div>
               <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
+                <p class="fst-italic" style="text-align: justify;">
+                  Ever since I was a child, I've been drawn to computer and designing. Over the years, this fascination evolved into a deep-seated passion that led me to pursue Computer Science Engineering.
                 </p>
                 <div class="row">
                   <div class="col-lg-6">
@@ -92,9 +91,8 @@
                     </ul>
                   </div>
                 </div>
-                <p>
-                  Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-                  Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+                <p style="text-align: justify;">
+                  Integrity, creativity, and collaboration are at the core of everything I do. I believe in continous learning and attention to detail, which guide my work and interactions with others. I'm not just about delivering results; I'm about creating meaningful and impactful experiences.
                 </p>
                 <p class="pt-3"><a class="btn btn-dark js-scroll px-4" onclick="location.href='assets/resume.pdf'" role="button">Download CV</a></p>
               </div>
@@ -108,7 +106,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="text-align: justify;">As a versatile developer and designer, I bring a unique blend of technical expertise and creative vision to every project. Proficient in front-end and back-end development, I craft visually stunning and seamlessly functional websites and applications. I thrive on transforming complex concepts into intuitive digital solutions. Whether it's coding elegant websites or designing captivating user interfaces, I'm dedicated to delivering excellence in every aspect of my work.</p>
         </div>
 
         <div class="row skills-content">
@@ -185,7 +183,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="text-align: justify;">With a rich and diverse background in both development and design, my career has been a dynamic journey of growth and achievement. I'm proud of the innovative solutions I've contributed to and look forward to new challenges that allow me to further elevate my craft.</p>
         </div>
 
         <div class="row">
@@ -207,8 +205,8 @@
               <h4>BACHELORS IN COMPUTER SCIENCE ENGINEERING</h4>
               <h5>2020-Present</h5>
               <p><em>New LJ Institute Of Engineering And Technology, Ahmedabad, Gujarat</em></p>
-              <p>I am pursuing a Bachelor's degree in Computer Science with a focus on programming languages like HTML,CSS,Javascript,Python and its various fameworks.</p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p style="text-align: justify;">I am pursuing a Bachelor's degree in Computer Science with a focus on programming languages like HTML,CSS,Javascript,Python and its various fameworks.</p>
+              <p style="text-align: justify;">During my academic journey, I developed a passion for merging design and technology to create compelling digital experiences.My commitment to learning and staying at the forefront of industry trends drives my continuous growth as a developer and designer.</p>
             </div>
           </div>
         </div>
@@ -222,7 +220,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="text-align: justify;">I'm thrilled that you've taken the time to explore my portfolio and learn more about my work. Whether you have a project idea, a collaboration proposal, or simply want to connect, I'd love to hear from you. I'm looking forward to the opportunity to work together and turn your vision into reality.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
